--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/app.js",
-    "dev": "nodemon src/app.ts",
-    "build": "tsc -p ."
+    "start": "ts-node src/app.ts",
+    "dev": "nodemon src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -20,10 +19,12 @@
   },
   "homepage": "https://github.com/indralaksmana/node-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.1",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
@@ -38,8 +39,10 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
     "@babel/runtime": "^7.13.9",
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.32",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
