feat(db-config): add port to db config

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_PORT=8089
 JWT_SECRET=password
 
 # DB ENVIRONTMENT
-DB_HOST=172.23.0.2
+DB_HOST=13.212.13.22
+DB_PORT=3360
 DB_USERNAME=root
 DB_PASSWORD=password
 DB_DATABASE=node_api
